--- a/style.css
+++ b/style.css
@@ -156,8 +156,9 @@ h2 {
 }
 
 #people {
-    min-height: 0;
-    max-height: 100%;
+    /*min-height: 0;*/
+    height: 90%;
+    top:0;
     bottom: 0;
     margin: auto;
     overflow: auto;
@@ -409,7 +410,8 @@ h2 {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    right: 0;
+    /*width: 100%;*/
     /*height: 100%;*/
     /*background: #ffffff;*/
     z-index: 1500;
@@ -437,9 +439,10 @@ h2 {
     /*bottom: 0;*/
     left: 0;
     /*right: 0;*/
-    /*width: 100%;*/
-    /*height: 100%;*/
-    display: none;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.7);
+    /*display: none;*/
 }
 
 .blur {
